--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   publish = "."
-  command = "# no build command needed for static site"
+  command = "echo 'No build command needed for static site'"
